--- a/project files/templates/login.html
+++ b/project files/templates/login.html
@@ -1,5 +1,5 @@
 <form method="POST">
-    Email: <input type="email" name="email" required><br>
+    Email: <input type="email" name="username" required><br>
     Password: <input type="password" name="password" required><br>
     Role:
     <select name="role" required>
